# soil-moisture-sensor

./: LICENSE  README.md
firmware/: .gitignore  Cargo.toml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: arr_deque.rs  main.rs
graphics/: .gitignore  Makefile  sensor-circuit.tex
pcb/: .gitignore  moisture-sensor.kicad_pcb  moisture-sensor.kicad_pro  moisture-sensor.kicad_sch
